#75 Update dependencies and migrate to Java 17