@@ -88,7 +88,7 @@ public class DataGeneratorTask implements Runnable {
   }
 
   private void deleteDataFiles() throws IOException {
-    if (taskConfiguration.steps.size() > 0
+    if (!taskConfiguration.steps.isEmpty()
         && !taskConfiguration.steps.contains(TaskStep.DELETE_DATA_FILES)) {
       LOG.info(marker, "Skipping store data step");
       return;
@@ -101,7 +101,7 @@ public class DataGeneratorTask implements Runnable {
   }
 
   private void downloadData() throws IOException {
-    if (taskConfiguration.steps.size() > 0
+    if (!taskConfiguration.steps.isEmpty()
         && !taskConfiguration.steps.contains(TaskStep.DOWNLOAD_DATA)) {
       LOG.info(marker, "Skipping download data step");
       return;
@@ -123,7 +123,7 @@ public class DataGeneratorTask implements Runnable {
             + "&fields="
             + taskConfiguration.request1.fields
             + "&query="
-            + URLEncoder.encode(taskConfiguration.request1.query, StandardCharsets.UTF_8.name());
+            + URLEncoder.encode(taskConfiguration.request1.query, StandardCharsets.UTF_8);
 
     LOG.debug("Downloading {}", requestUrl1);
     URL download = new URL(requestUrl1);
@@ -143,7 +143,7 @@ public class DataGeneratorTask implements Runnable {
             + "&fields="
             + taskConfiguration.request2.fields
             + "&query="
-            + URLEncoder.encode(taskConfiguration.request2.query, StandardCharsets.UTF_8.name());
+            + URLEncoder.encode(taskConfiguration.request2.query, StandardCharsets.UTF_8);
 
     LOG.debug("Downloading {}", requestUrl2);
     URL download2 = new URL(requestUrl2);
@@ -153,7 +153,7 @@ public class DataGeneratorTask implements Runnable {
   }
 
   protected void storeData() throws IOException, SQLException {
-    if (taskConfiguration.steps.size() > 0
+    if (!taskConfiguration.steps.isEmpty()
         && !taskConfiguration.steps.contains(TaskStep.STORE_DATA)) {
       LOG.info(marker, "Skipping store data step");
       return;
@@ -254,7 +254,7 @@ public class DataGeneratorTask implements Runnable {
   }
 
   private void processData() throws SQLException {
-    if (taskConfiguration.steps.size() > 0
+    if (!taskConfiguration.steps.isEmpty()
         && !taskConfiguration.steps.contains(TaskStep.PROCESS_DATA)) {
       LOG.info(marker, "Skipping store data step");
       return;
